# FourInARowUniveristyProject

./: .gitignore  CMakeLists.txt  LICENSE  SPArrayList.c  SPArrayList.h  SPArrayListUnitTest.c  SPFIAR  SPFIARGame.c  SPFIARGame.h  SPFIARGameUnitTest.c  SPFIARParser.c  SPFIARParser.h  SPFIARParserUnitTest.c  SPMainAux.c  SPMainAux.h  SPMinimax.c  SPMinimax.h  SPMinimaxNode.c  SPMinimaxNode.h  main.c  makefile  unit_test_util.h
project.xcodeproj/: project.pbxproj
project.xcodeproj/project.xcworkspace/xcuserdata/meltzer.xcuserdatad/: UserInterfaceState.xcuserstate
project.xcodeproj/xcuserdata/meltzer.xcuserdatad/xcschemes/: xcschememanagement.plist
